# unicode_sniffer

./: .gitignore  Cargo.toml  LICENSE  README.MD  index.html
.github/workflows/: deploy.yml
assets/: sw.js
src/: app.rs  lib.rs  main.rs
